--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<input type = "checkbox">Raw</input>
 </div>
 <div class = "row">
-<pre id = "display"></pre>
+<div id = "display"></div>
 </div>
 </div>	
 
