--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
 <div class = "row">
 	<!--button id="install-btn">Install app</button-->
 	<button id="connect" class = "button">Connect</button>
-	<input type = "checkbox">Raw</input>
+    <button id="viewraw" class = "button">View raw</button>
 </div>
-<div class = "row">
-<div id = "display"></div>
+<div class = "row" id = "data">
+    <div id = "path"></div>
+    <div id = "display"></div>
 </div>
+<div class = "row hidden" id = "raw"></div>
 </div>	
 
 <!-- Below is your custom application script -->
