--- a/index.html
+++ b/index.html
@@ -36,12 +36,23 @@
         <img id = "connected" />
         <button id="viewraw" class = "button">View raw</button>
         <button id="disconnect" class = "button">Disconnect</button>
+        <button id="about" class = "button">?</button>
     </div>
     <div id = "data" class = "hidden">
         <div id = "path"></div>
         <div id = "display"></div>
     </div>
     <div class = "hidden" id = "raw"></div>
+    <div class = "hidden" id = "fileopen">
+        <span id = "filename"></span>
+        <textarea id = "filecontent"></textarea>
+        <button id="filecancel" class = "button">Back</button>
+        <button id="filesave" class = "button">Save</button>
+        <span id = "fileinfo"></span>
+    </div>
+    <div class = "hidden" id = "aboutpopup">
+        See <a href = "http://izzyway.com/" target = "_blank">izzyway.com</a>
+    </div>
 </div>	
 
 <!-- Below is your custom application script -->
