--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
     <div class = "hidden" id = "fileopen">
         <span id = "filename"></span>
         <textarea id = "filecontent"></textarea>
-        <button id="filecancel" class = "button">Back</button>
+        <button id="filecancel" class = "button">Close</button>
         <button id="filesave" class = "button">Save</button>
         <span id = "fileinfo"></span>
     </div>
+    <div class = "hidden" id = "image"></div>
     <div class = "hidden" id = "aboutpopup">
         See <a href = "http://izzyway.com/" target = "_blank">izzyway.com</a>
     </div>
