--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <span id = "fileinfo"></span>
     </div>
     <div class = "hidden" id = "imageopen">
+        <span id = "imagename"></span>
         <div id = "image"></div>
         <button id="imageclose" class = "button">Close</button>
     </div>
