Add crash report

--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
         <div id = "path"></div>
         <div id = "display"></div>
     </div>
+    <div class = "hidden" id = "error">
+        Unexpected error:
+        <div id = "message"></div>
+        <div id="invit">Please report this error to improve the izzy FTP</div>
+        <div id = "bugbutton"><button id="bug">Report the error</button></div>
+        <div id ="thanks" class = "hidden"></div>
+    </div>
     <div class = "hidden" id = "raw"></div>
     <div class = "hidden" id = "fileopen">
         <span id = "filename"></span>
