improve almost every thing

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id = "connection">
         <div>
             <p>Host:</p>
-            <input name = "host" id = "host" type = "text" value = "ftpperso.free.fr" />
+            <input name = "host" id = "host" type = "text" value = "" />
         </div>
         <div>
             <p>Port:</p>
@@ -47,7 +47,7 @@
         Unexpected error:
         <div id = "message"></div>
         <div id="invit">Please report this error to improve the izzy FTP</div>
-        <div id = "bugbutton"><button id="bug">Report the error</button></div>
+        <div id = "bugbutton"><button id="bug">Report the error (anonymously)</button></div>
         <div id ="thanks" class = "hidden"></div>
     </div>
     <div class = "hidden" id = "raw"></div>
@@ -63,8 +63,9 @@
         <div id = "image"></div>
         <button id="imageclose" class = "button">Close</button>
     </div>
-    <div class = "hidden" id = "aboutpopup">
-        See <a href = "http://izzyway.com/" target = "_blank">izzyway.com</a>
+    <div class = "hidden" id = "aboutpopup">izzy FTP 0.4 by
+        <a href = "http://izzyway.com/" target = "_blank">izzyway.com</a>
+        <div id = "slogan">Tech'it izzy</div>
     </div>
 </div>	
 
