better error management

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
         Unexpected error:
         <div id = "message"></div>
         <div id="invit">Please report this error to improve the izzy FTP</div>
+        <div id="wronghost">Please verify your host and port</div>
+        <div id="wronguser">Please verify your credencials</div>
         <div id = "bugbutton"><button id="bug">Report the error (anonymously)</button></div>
+        <div id = "backbutton"><button id="back">Back to connection page</button></div>
         <div id ="thanks" class = "hidden"></div>
     </div>
     <div class = "hidden" id = "raw"></div>
