--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- UPLOAD POPUP -->
     <div id = "uploadpopup">
         <div>Image: <input type = "text" id = "uploadfile" disabled = "disabled" /></div>
-        <div>Target directory: <input type = "text" id = "uploaddirectory" /></div>
+        <div>Target directory: <input type = "text" id = "uploaddirectory" disabled="disabled" /></div>
         <div>Target filename:  <input type = "text" id = "uploadname" /></div>
         <div id = "uploadbutton">
             <button id = "uploadaction">Upload</button>
