Upload file in a new directory

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- UPLOAD POPUP -->
     <div id = "uploadpopup">
         <div>Image: <input type = "text" id = "uploadfile" disabled = "disabled" /></div>
-        <div>Target directory: <input type = "text" id = "uploaddirectory" disabled="disabled" /></div>
+        <div>Target directory: <input type = "text" id = "uploaddirectory" /></div>
         <div>Target filename:  <input type = "text" id = "uploadname" /></div>
         <div id = "uploadbutton">
             <button id = "uploadaction">Upload</button>
@@ -60,7 +60,8 @@
     </div>
     <!-- MENU -->
     <div id = "menupopup">
-        <button id="upload" class = "button">Upload an image</button>
+        <button id="upload" class = "button">Upload an picture</button>
+        <button id="new" class = "button">New</button>
         <button id="viewraw" class = "button"></button>
         <button id="reload" class = "button">Reload</button>
         <button id = "about">About</button>
