New UI and new features (rename and draft delete)

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <!-- ABOUT POPUP -->
     <div id = "aboutpopup">
-        izzy FTP 0.6 by
+        izzy FTP 0.8 by
         <a href = "http://izzyway.com/" target = "_blank">izzyway.com</a>
         <div id = "slogan">Tech'it izzy</div>
     </div>
@@ -58,6 +58,35 @@
             <button id = "uploadclose">Close</button>
         </div>
     </div>
+    <!-- NEW FILE -->
+    <div id = "newfilepopup">
+        <div>Name: <input type = "text" id = "newfilename" /></div>
+        <div id = "newfilebutton">
+            <button id = "newfolder">Create Folder</button>
+            <button id = "newtextfile">Create Text File</button>
+            <button id = "newfilecancel">Cancel</button>
+        </div>
+    </div>
+    <!-- FILE -->
+    <div id = "filepopup">
+        <input type = "text" id = "filename" />
+        <div id = "filebutton">
+            <button id = "fileopen">Open</button>
+            <button id = "filerename">Rename</button>
+            <button id = "filedownload">Download</button>
+            <button id = "filedelete">Delete</button>
+            <button id = "fileclose">Close</button>
+        </div>
+    </div>
+    <!-- ARE YOU SURE -->
+    <div id = "ayspopup">
+        <p>You are going to delete <span id="aysfile"></span></p>
+        <p>Are you sure?</p>
+        <div id = "aysbutton">
+            <button id = "aysyes">Yes</button>
+            <button id = "aysno">No</button>
+        </div>
+    </div>    
     <!-- MENU -->
     <div id = "menupopup">
         <button id="upload" class = "button">Upload an picture</button>
