New file management

--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
         </div>
     </div>
     <!-- ARE YOU SURE -->
+    <div id = "modal"></div>
     <div id = "ayspopup">
-        <p>You are going to delete <span id="aysfile"></span></p>
+        <p>You are going to delete the <span id = "aysfiletype"></span> <span id="aysfilename"></span></p>
         <p>Are you sure?</p>
         <div id = "aysbutton">
             <button id = "aysyes">Yes</button>
