--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <div id = "errorbutton">
             <button id="back" class = "button">Back to connection</button>
             <button id="report" class = "button">Report error (anonymously)</button>
+            <button id="closereport" class = "button">Close</button>
+            <div id = "thanks"></div>
         </div>
     </div>
     <!-- ABOUT POPUP -->
@@ -64,7 +66,7 @@
         <div id = "newfilebutton">
             <button id = "newfolder">Create Folder</button>
             <button id = "newtextfile">Create Text File</button>
-            <button id = "newfilecancel">Cancel</button>
+            <button id = "newfilecancel">Close</button>
         </div>
     </div>
     <!-- FILE -->
