Integration of izzyjs-1.0, first step with FEAT command

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
 </div>
 
-<script src="scripts/izzycore.js"></script>
+<script src="scripts/izzyjs-0.1.js"></script>
 <script src="scripts/izzyobject.js"></script>
 <script src="scripts/izzyftp.js"></script>
 
